src/main/java/org/example/rippleback/core/error/exceptions/common/UnknownErrorException.java
package org.example.rippleback.core.error.exceptions.common;

public class UnknownErrorException extends RuntimeException {
    public UnknownErrorException(String message) {
        super(message);
    }
}
